--- a/themes/simplebootx/User/Profile/upload_award.html
+++ b/themes/simplebootx/User/Profile/upload_award.html
@@ -33,7 +33,7 @@
                                     <th width="80">获奖名称</th>
                                     <td>
                                         <input type="text" name="post[title]" id="title"
-                                               value="" placeholder="请输入获奖名称" />
+                                               value="" placeholder="请输入获奖名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -41,7 +41,7 @@
                                     <th width="80">获奖人列表</th>
                                     <td>
                                         <input type="text" name="post[grantee_list]" id="title"
-                                               value="" placeholder="请输入获奖人列表" />
+                                               value="" placeholder="请输入获奖人列表" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -63,7 +63,7 @@
                                     <th width="80">授予方名称</th>
                                     <td>
                                         <input type="text" name="post[grantor]" id="title"
-                                               value="" placeholder="请输入授予方名称" />
+                                               value="" placeholder="请输入授予方名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
