--- a/themes/simplebootx/User/Profile/upload_patent.html
+++ b/themes/simplebootx/User/Profile/upload_patent.html
@@ -33,7 +33,7 @@
                                     <th width="80">专利名称</th>
                                     <td>
                                         <input type="text" name="post[title]" id="title"
-                                               value="" placeholder="请输入专利名称" />
+                                               value="" placeholder="请输入专利名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -41,7 +41,7 @@
                                     <th width="80">发明人</th>
                                     <td>
                                         <input type="text" name="post[inventer]" id="title"
-                                               value="" placeholder="请输入发明人" />
+                                               value="" placeholder="请输入发明人" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
