--- a/themes/simplebootx/User/Profile/upload_project.html
+++ b/themes/simplebootx/User/Profile/upload_project.html
@@ -34,7 +34,7 @@
                                     <th width="80">项目名称</th>
                                     <td>
                                         <input type="text" name="post[title]" id="title"
-                                               value="" placeholder="请输入项目名称" />
+                                               value="" placeholder="请输入项目名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -42,7 +42,7 @@
                                     <th width="80">类型</th>
                                     <td>
                                         <input type="text" name="post[type]" id="type"
-                                               value="" placeholder="请输入类型" />
+                                               value="" placeholder="请输入类型" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -63,7 +63,7 @@
                                 <tr>
                                     <th width="80">项目经费额度</th>
                                     <td>
-                                        <input type="number" name="post[fund]" value="50000" min="0" step="10000" style="width: 70px">元
+                                        <input type="number" name="post[fund]" value="50000" min="0" step="10000" required style="width: 70px">元
                                         &nbsp;
 
                                         <span class="form-required">*</span>
