--- a/themes/simplebootx/User/Profile/password.html
+++ b/themes/simplebootx/User/Profile/password.html
@@ -21,33 +21,9 @@
                                    <li class="active"><a href="#one" data-toggle="tab"><i class="fa fa-lock"></i> 修改密码</a></li>
                                </ul>
                                <div class="tab-content">
-                                   <div class="tab-pane active" id="one">
-                                   		<form class="form-horizontal js-ajax-form" action="{:U('profile/password_post')}" method="post">
-                                   			<div class="control-group">
-                                   				<label class="control-label" for="input-old_password">原始密码</label>
-                                   				<div class="controls">
-                                   					<input type="password" id="input-old_password" placeholder="原始密码" name="old_password">
-                                   				</div>
-                                   			</div>
-                                   			<div class="control-group">
-                                   				<label class="control-label" for="input-password">新密码</label>
-                                   				<div class="controls">
-                                   					<input type="password" id="input-password" placeholder="新密码" name="password">
-                                   				</div>
-                                   			</div>
-                                   			<div class="control-group">
-                                   				<label class="control-label" for="input-repassword">重复密码</label>
-                                   				<div class="controls">
-                                   					<input type="password" id="input-repassword" placeholder="重复密码" name="repassword">
-                                   				</div>
-                                   			</div>
-                                   			<div class="control-group">
-                                   				<div class="controls">
-                                   					<button type="submit" class="btn js-ajax-submit">保存</button>
-                                   				</div>
-                                   			</div>
-                                   		</form>
-                                   </div>
+                                   <h4>本系统登录是通过智慧校园来进行实名验证，如需修改密码，请前往智慧校园，点击以下链接：</h4>
+								   <br>
+								   <a href="http://idssrv01.njupt.edu.cn/amserver/UI/Login?goto=http://imp.njupt.edu.cn/imp/authLogin.do">登录修改密码</a>
                                </div>							
                            </div>
                     </div>
