--- a/admin/themes/simplebootx/Admin/login.html
+++ b/admin/themes/simplebootx/Admin/login.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>ThinkCMF {:L('ADMIN_CENTER')}</title>
+		<title>高校科研管理系统 {:L('ADMIN_CENTER')}</title>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
 		<meta name="renderer" content="webkit|ie-comp|ie-stand">
 		<meta name="robots" content="noindex,nofollow">
@@ -32,7 +32,7 @@
 	</head>
 <body>
 	<div class="wrap">
-		<h1><a href="__ROOT__">ThinkCMF {:L('ADMIN_CENTER')}</a></h1>
+		<h1><a href="__ROOT__">高校科研管理系统 {:L('ADMIN_CENTER')}</a></h1>
 		<form method="post" name="login" action="{:U('public/dologin')}" autoComplete="off" class="js-ajax-form">
 			<div class="login">
 				<ul>
