--- a/themes/simplebootx/jump.html
+++ b/themes/simplebootx/jump.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>ThinkCMF-跳转提示</title>
+    <title>高校科研管理系统-跳转提示</title>
     <style type="text/css">
         * {
             padding: 0;
@@ -60,7 +60,7 @@
     </present>
     <p class="detail"></p>
     <p class="jump">
-        ThinkCMF：页面自动 <a id="href" href="<?php echo($jumpUrl); ?>">跳转</a> 等待时间： <b
+        高校科研管理系统：页面自动 <a id="href" href="<?php echo($jumpUrl); ?>">跳转</a> 等待时间： <b
             id="wait"><?php echo($waitSecond); ?></b>
     </p>
 </div>
