--- a/themes/simplebootx/success.html
+++ b/themes/simplebootx/success.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ThinkCMF-跳转提示</title>
+    <title>高校科研管理系统-跳转提示</title>
     <tc_include file="Public/head"/>
     <style type="text/css">
         * {
@@ -58,7 +58,7 @@
     </present>
     <p class="detail"></p>
     <p class="jump">
-        ThinkCMF：页面自动 <a id="href" href="<?php echo($jumpUrl); ?>">跳转</a> 等待时间： <b
+        高校科研管理系统：页面自动 <a id="href" href="<?php echo($jumpUrl); ?>">跳转</a> 等待时间： <b
             id="wait"><?php echo($waitSecond); ?></b>
     </p>
 </div>
