修改后台登录的样式 和index页面

--- a/admin/themes/simplebootx/Admin/login.html
+++ b/admin/themes/simplebootx/Admin/login.html
@@ -1,39 +1,47 @@
 <!doctype html>
 <html>
+
 	<head>
 		<meta charset="UTF-8" />
-		<title>高校科研管理系统 {:L('ADMIN_CENTER')}</title>
+		<title>南京邮电大学高校科研管理系统后台登录</title>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
 		<meta name="renderer" content="webkit|ie-comp|ie-stand">
 		<meta name="robots" content="noindex,nofollow">
-		<link href="__TMPL__Public/assets/css/admin_login.css" rel="stylesheet" />
+		<link href="__TMPL__Asset/css/admin_login.css" rel="stylesheet" />
 		<style>
-			#login_btn_wraper{
+			#login_btn_wraper {
 				text-align: center;
 			}
-			#login_btn_wraper .tips_success{
-				color:#fff;
+			#login_btn_wraper .tips_success {
+				color: #fff;
 			}
-			#login_btn_wraper .tips_error{
-				color:#DFC05D;
+			#login_btn_wraper .tips_error {
+				color: #DFC05D;
 			}
-			#login_btn_wraper button:focus{outline:none;}
+			#login_btn_wraper button:focus {
+				outline: none;
+			}
 		</style>
 		<script>
 			if (window.parent !== window.self) {
-					document.write = '';
-					window.parent.location.href = window.self.location.href;
-					setTimeout(function () {
-							document.body.innerHTML = '';
-					}, 0);
+				document.write = '';
+				window.parent.location.href = window.self.location.href;
+				setTimeout(function() {
+					document.body.innerHTML = '';
+				}, 0);
 			}
 		</script>
-		
+
 	</head>
-<body>
-	<div class="wrap">
-		<h1><a href="__ROOT__">高校科研管理系统 {:L('ADMIN_CENTER')}</a></h1>
-		<form method="post" name="login" action="{:U('public/dologin')}" autoComplete="off" class="js-ajax-form">
+
+	<body>
+		<div class="logo">
+			<img src="__TMPL__Asset/images/logo.png">
+		</div>
+		<div class="wrap">
+			<div class="login">
+				<h1>高校科研管理|后台登录</h1>
+				<form method="post" name="login" action="{:U('public/dologin')}" autoComplete="off" class="js-ajax-form">
 			<div class="login">
 				<ul>
 					<li>
@@ -54,22 +62,27 @@
 				</div>
 			</div>
 		</form>
-	</div>
+			</div>
+		</div>
+		<div class="copy">&copy; 2016 <a href="http://www.njuptsast.org/">南邮校科协</a>
+		</div>
 
-<script>
-var GV = {
-	DIMAUB: "",
-	JS_ROOT: "__PUBLIC__/js/",//js版本号
-	TOKEN : ''	//token ajax全局
-};
-</script>
-<script src="__PUBLIC__/js/wind.js"></script>
-<script src="__PUBLIC__/js/jquery.js"></script>
-<script type="text/javascript" src="__PUBLIC__/js/common.js"></script>
-<script>
-;(function(){
-	document.getElementById('js-admin-name').focus();
-})();
-</script>
-</body>
+		<script>
+			var GV = {
+				DIMAUB: "",
+				JS_ROOT: "__PUBLIC__/js/",//js版本号
+				TOKEN : ''	//token ajax全局
+			};
+		</script>
+		<script src="__PUBLIC__/js/wind.js"></script>
+		<script src="__PUBLIC__/js/jquery.js"></script>
+		<script type="text/javascript" src="__PUBLIC__/js/common.js"></script>
+		<script>
+			;
+			(function() {
+				document.getElementById('J_admin_name').focus();
+			})();
+		</script>
+	</body>
+
 </html>
