--- a/admin/themes/simplebootx/Admin/Main/index.html
+++ b/admin/themes/simplebootx/Admin/Main/index.html
@@ -13,12 +13,7 @@ li {
 <body>
 	<div class="wrap">
 		<div id="home_toptip"></div>
-		<h4 class="well">{:L('SYSTEM_NOTIFICATIONS')}</h4>
-		<div class="home_info">
-			<ul id="thinkcmf_notices">
-				<li><img src="__TMPL__Public/assets/images/loading.gif"style="vertical-align: middle;" /><span style="display: inline-block; vertical-align: middle;">加载中...</span></li>
-			</ul>
-		</div>
+		
 		<h4 class="well">{:L('SYSTEM_INFORMATIONS')}</h4>
 		<div class="home_info">
 			<ul>
@@ -27,30 +22,12 @@ li {
 				</volist>
 			</ul>
 		</div>
-		<h4 class="well">{:L('INITIATE_TEAM')}</h4>
-		<div class="home_info" id="home_devteam">
-			<ul>
-				<li><em>ThinkCMF</em> <a href="http://www.thinkcmf.com" target="_blank">www.thinkcmf.com</a></li>
-				<li><em>{:L('TEAM_MEMBERS')}</em> <span>Dean,Sam,Tuolaji,Smile,Codefans,睡不醒的猪,Jack,日本那只猫</span></li>
-				<li><em>{:L('CONTACT_EMAIL')}</em> <span>cmf@simplewind.net</span></li>
-			</ul>
-		</div>
 		<h4 class="well">{:L('CONTRIBUTORS')}</h4>
 		<div class="">
 			<ul class="inline" style="margin-left: 25px;">
-				<li>Kin Ho</li>
-				<li><a href="http://wzx.thinkcmf.com" target="_blank">Powerless</a></li>
-				<li>Jess</li>
-				<li>木兰情</li>
-				<li><a href="http://www.91freeweb.com/" target="_blank">Labulaka</a></li>
-				<li><a href="http://www.syousoft.com/" target="_blank">WelKinVan</a></li>
-				<li><a href="http://blog.sina.com.cn/u/1918098881" target="_blank">Jeson</a></li>
-				<li>Yim</li>
-				<li><a href="http://www.jamlee.cn/" target="_blank">Jamlee</a></li>
-				<li><a>香香咸蛋黄</a></li>
-				<li><a>小夏</a></li>
-				<li><a href="http://www.xdmeng.com" target="_blank">小凯</a></li>
-				<li><a href="https://www.devmsg.com" target="_blank">Co</a></li>
+				<li>sdygt</li>
+				<li>Racheluxe</li>
+				<li>zhzy0077</li>
 				
 			</ul>
 		</div>
