主色调改成南邮蓝 修改logo

--- a/admin/themes/simplebootx/Admin/boot/index.html
+++ b/admin/themes/simplebootx/Admin/boot/index.html
@@ -159,7 +159,7 @@ right: initial !important;}
 				</a>
 				<div class="pull-left nav_shortcuts" >
 					
-					<a class="btn btn-small btn-warning" href="__ROOT__/" title="{:L('WEBSITE_HOME_PAGE')}" target="_blank">
+					<a class="btn btn-small btn-info" href="__ROOT__/" title="{:L('WEBSITE_HOME_PAGE')}" target="_blank">
 						<i class="fa fa-home"></i>
 					</a>
 					
