--- a/themes/simplebootx/Portal/list.html
+++ b/themes/simplebootx/Portal/list.html
@@ -40,7 +40,7 @@
 							</a>
 							</div>
 						</div>
-						<a class="btn btn-warning pull-right" href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}">查看更多</a>
+						<a class="btn btn-info pull-right" href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}">查看更多</a>
 					</div>
 				</div>
 				</volist>
