--- a/themes/simplebootx/Portal/page.html
+++ b/themes/simplebootx/Portal/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>{$post_title} {$site_name} </title>
+		<title>{$post_title} | {$site_name} </title>
 		<meta name="keywords" content="{$post_keywords}" />
 		<meta name="description" content="{$post_excerpt}">
 		<tc_include file="Public:head" />
