--- a/themes/simplebootx/Portal/search.html
+++ b/themes/simplebootx/Portal/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>搜索 {$site_name} </title>
+		<title>搜索 | {$site_name} </title>
 		<meta name="keywords" content="" />
 		<meta name="description" content="">
 		<tc_include file="Public:head" />
