--- a/themes/simplebootx/Public/head.html
+++ b/themes/simplebootx/Public/head.html
@@ -1,6 +1,6 @@
 	<tc_include file=":function"/>
 	<tc_include file=":config"/>
-	<meta name="author" content="ThinkCMF">
+	<meta name="author" content="高校科研管理系统">
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
