--- a/themes/simplebootx/Portal/contact.html
+++ b/themes/simplebootx/Portal/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>联系我们 {$site_name}</title>
+<title>联系我们 | {$site_name}</title>
 <meta name="keywords" content="{$site_seo_keywords}" />
 <meta name="description" content="{$site_seo_description}">
 <tc_include file="Public:head" />
