--- a/themes/simplebootx/Portal/index.html
+++ b/themes/simplebootx/Portal/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>{$site_seo_title} {$site_name}</title>
+		<title>{$site_seo_title} | {$site_name}</title>
 		<meta name="keywords" content="{$site_seo_keywords}" />
 		<meta name="description" content="{$site_seo_description}">
 		<tc_include file="Public:head" />
