假装改了改首页

--- a/themes/simplebootx/Portal/index.html
+++ b/themes/simplebootx/Portal/index.html
@@ -42,59 +42,23 @@ $home_slides=sp_getslide("portal_index");
 
 $home_slides=empty($home_slides)?$default_home_slides:$home_slides;
 </php>
-<ul id="homeslider" class="unstyled">
-	<foreach name="home_slides" item="vo">
-	<li>
-		<div class="caption-wraper">
-			<div class="caption">{$vo.slide_name}</div>
-		</div>
-		<a href="{$vo.slide_url}"><img src="{:sp_get_asset_upload_path($vo['slide_pic'])}" alt=""></a>
-	</li>
-	</foreach>
-</ul>
 <div class="container">
-	
 	<div>
-		<h1 class="text-center">快速了解ThinkCMF</h1>
-		<h3 class="text-center">Quickly understand the ThinkCMF</h3>
-	</div>
-	<div class="row">
-		<div class="span4">
-			 <h2 class="font-large nospace"><i class="fa fa-bars"></i> MVC分层模式</h2>
-             <p>使用MVC应用程序被分成三个核心部件：模型（M）、视图（V）、控制器（C），他不是一个新的概念，只是ThinkCMF将其发挥到了极致。</p>
-		</div>
-		<div class="span4">
-			 <h2 class="font-large nospace"><i class="fa fa-group"></i> 用户管理</h2>
-             <p>ThinkCMF内置了灵活的用户管理方式，并可直接与第三方站点进行互联互通，如果你愿意甚至可以对单个用户或群体用户的行为进行记录及分享，为您的运营决策提供有效参考数据。</p>
-		</div>
-		<div class="span4">
-			  <h2 class="font-large nospace"><i class="fa fa-cloud"></i> 云端部署</h2>
-              <p>通过驱动的方式可以轻松支持云平台的部署，让你的网站无缝迁移，内置已经支持SAE、BAE，正式版将对云端部署进行进一步优化。</p>
-		</div>
+		<h1 class="text-center">高校科研管理系统</h1>
+		<h2><a id="user-content-系统优越性" class="anchor" href="#系统优越性" aria-hidden="true"></a>系统优越性</h2>
+
+<p>每位老师可以知道自己的实时年度排名。由于每个人都有荣誉感，因此大家乐于知道自己的排名情况；因此，大家会乐于及时发布自己的成果；此外，每个人都有集体荣誉感，希望能看到自己的学院在学校排名靠前，因此会及时发布个人成果，增加学院积分；</p>
+
+<p>利用每个人的好奇心理，希望知道别人的发表论文、项目。因此，系统的用户粘性将较好，融入社交功能后，将会增加教师间感情，互相激励；</p>
+
+<p>由于每个人都希望自我价值能够获得体现和认可，尤其来自领导和行政部门的认可，因此，当各级领导以自己账号登陆系统时；</p>
+
+<p>论文的分享到微信朋友圈，QQ空间，便于展示个人成果，增加引用率，促进学术交流。</p>
+
+<p>如果系统能够辅以一些学校的政策鼓励，将会极大地发挥系统功能。如规定成果录入日期不得晚于成果产生的1个月之内。再比如，阶段性地对系统内的教师按照科研积分进行奖励。</p>
+
 	</div>
 	
-	<div class="row">
-		<div class="span4">
-			 <h2 class="font-large nospace"><i class="fa fa-heart"></i> 安全策略</h2>
-             <p>提供的稳健的安全策略，包括备份恢复，容错，防治恶意攻击登陆，网页防篡改等多项安全管理功能，保证系统安全，可靠，稳定的运行。</p>
-		</div>
-		<div class="span4">
-			 <h2 class="font-large nospace"><i class="fa fa-cubes"></i> 应用模块化</h2>
-             <p>提出全新的应用模式进行扩展，不管是你开发一个小功能还是一个全新的站点，在ThinkCMF中你只是增加了一个APP，每个独立运行互不影响，便于灵活扩展和二次开发。</p>
-		</div>
-		<div class="span4">
-			  <h2 class="font-large nospace"><i class="fa fa-certificate"></i> 免费开源</h2>
-              <p>代码遵循Apache2开源协议，免费使用，对商业用户也无任何限制。</p>
-		</div>
-	</div>
-	
-	<div>
-		<h1 class="text-center">最新资讯</h1>
-		<h3 class="text-center">Last News</h3>
-	</div>
-	<php>
-		$lastnews=sp_sql_posts("cid:$portal_index_lastnews;field:post_title,post_excerpt,tid,smeta;order:listorder asc;limit:4;"); 
-	</php>
 	<div class="row">
 		<foreach name="lastnews" item="vo">
 		<php>$smeta=json_decode($vo['smeta'],true);</php>
