加入编辑内容页的功能

--- a/themes/simplebootx/User/Profile/edit_patent.html
+++ b/themes/simplebootx/User/Profile/edit_patent.html
@@ -18,42 +18,44 @@
                     <div class="span9">
                            <div class="tabs">
                                <ul class="nav nav-tabs">
-                                   <li ><a href="{:U('user/profile/upload_paper')}" ><i class="fa fa-pencil"></i> 上传论文</a></li>
-                                   <li ><a href="{:U('user/profile/upload_project')}" ><i class="fa fa-pencil"></i> 上传项目</a></li>
-                                   <li ><a href="{:U('user/profile/upload_award')}" ><i class="fa fa-pencil"></i> 上传获奖</a></li>
-                                   <li class="active"><a  data-toggle="tab"><i class="fa fa-pencil"></i> 上传专利</a></li>
+                                   <li><a href="{:U('user/profile/manage')}"><i class="fa fa-desktop"></i> 总览</a></li>
+                                   <li><a href="{:U('user/profile/manage_paper')}"><i class="fa fa-desktop"></i> 专利管理</a></li>
+                                   <li><a href="{:U('user/profile/manage_project')}"><i class="fa fa-desktop"></i> 项目管理</a></li>
+                                   <li><a href="{:U('user/profile/manage_award')}"><i class="fa fa-desktop"></i> 获奖管理</a></li>
+                                   <li class="active"><a href="#"><i class="fa fa-desktop"></i> 专利管理</a></li>
                                </ul>
                 <div class="tab-content">
-                    <form action="{:U('AdminPage/add_post')}" method="post" class="form-horizontal js-ajax-forms"
+                    <form action="{:U('User/Profile/content_update')}" method="post" class="form-horizontal js-ajax-forms"
                           enctype="multipart/form-data">
-                        <input type="hidden" name="post[post_type]" value="2">
+                        <input type="hidden" name="id" value="{$post.id}">
+                        <input type="hidden" name="post[post_type]" value="patent">
                         <div class="row-fluid">
                             <table class="table table-bordered">
                                 <tr>
                                     <th width="80">专利名称</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入专利名称"/>
+                                        <input type="text" name="post[title]" id="title"
+                                               value="{$post.title}" placeholder="请输入专利名称"/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">发明人</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入发明人"/>
+                                        <input type="text" name="post[inventor]" id="title"
+                                               value="{$post.inventor}" placeholder="请输入发明人"/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">专利类型</th>
                                     <td>
-                                        <select class="form-control" style="width:90px;">
-                                            <option>请选择</option>
-                                            <option>发明</option>
-                                            <option>实用新型</option>
-                                            <option>外观设计</option>
-                                            <option>其它</option>
+                                        <select class="form-control" name="post[type]" required style="width:90px;">
+                                            <option value="" disabled>请选择</option>
+                                            <option value="1" <?php echo $post['type']==1?'selected':''?> >发明</option>
+                                            <option value="2" <?php echo $post['type']==2?'selected':''?> >实用新型</option>
+                                            <option value="3" <?php echo $post['type']==3?'selected':''?> >外观设计</option>
+                                            <option value="4" <?php echo $post['type']==4?'selected':''?> >其它</option>
                                         </select>
                                         <span class="form-required">*</span>
                                     </td>
@@ -61,7 +63,7 @@
                                 <tr>
                                     <th width="80">证明材料</th>
                                     <td>
-                                        <script type="text/plain" id="content" name="post[post_content]"></script>
+                                        <script type="text/plain" id="content" name="post[provement]">{$post.provement}</script>
                                     </td>
                                 </tr>
                             </table>
