--- a/themes/simplebootx/User/Profile/edit_award.html
+++ b/themes/simplebootx/User/Profile/edit_award.html
@@ -2,59 +2,61 @@
 <html>
 <head>
     <title>{$site_name}</title>
-    <meta name="keywords" content="{$site_seo_keywords}"/>
+    <meta name="keywords" content="{$site_seo_keywords}" />
     <meta name="description" content="{$site_seo_description}">
     <meta name="author" content="ThinkCMF">
-    <tc_include file="Public:head"/>
+    <tc_include file="Public:head" />
 </head>
 <body class="body-white" id="top">
-<tc_include file="Public:nav"/>
+<tc_include file="Public:nav" />
 
 <div class="container tc-main">
     <div class="row">
         <div class="span3">
-            <tc_include file="Public:usernav"/>
+            <tc_include file="Public:usernav" />
         </div>
         <div class="span9">
             <div class="tabs">
                 <ul class="nav nav-tabs">
-                    <li><a href="{:U('user/profile/upload_paper')}"><i class="fa fa-pencil"></i> 上传论文</a></li>
-                    <li><a href="{:U('user/profile/upload_project')}"><i class="fa fa-pencil"></i> 上传项目</a></li>
-                    <li class="active"><a><i class="fa fa-pencil"></i> 上传获奖</a></li>
-                    <li><a href="{:U('user/profile/upload_patent')}"><i class="fa fa-pencil"></i> 上传专利</a></li>
+                    <li><a href="{:U('user/profile/manage')}" ><i class="fa fa-desktop"></i> 总览</a></li>
+                    <li><a href="{:U('user/profile/manage_paper')}"><i class="fa fa-desktop"></i> 论文管理</a></li>
+                    <li><a href="{:U('user/profile/manage_project')}"><i class="fa fa-desktop"></i> 项目管理</a></li>
+                    <li class="active"><a href="#"><i class="fa fa-desktop"></i> 获奖管理</a></li>
+                    <li><a href="{:U('user/profile/manage_patent')}"><i class="fa fa-desktop"></i> 专利管理</a></li>
                 </ul>
                 <div class="tab-content">
-                    <form action="{:U('AdminPage/add_post')}" method="post" class="form-horizontal js-ajax-forms"
+                    <form action="{:U('User/Profile/content_update')}" method="post" class="form-horizontal js-ajax-forms"
                           enctype="multipart/form-data">
-                        <input type="hidden" name="post[post_type]" value="2">
+                        <input type="hidden" name="id" value="{$post.id}">
+                        <input type="hidden" name="post[post_type]" value="award">
                         <div class="row-fluid">
                             <table class="table table-bordered">
                                 <tr>
                                     <th width="80">获奖名称</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入获奖名称"/>
+                                        <input type="text" name="post[title]" id="title"
+                                               value="{$post.title}" placeholder="请输入获奖名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">获奖人列表</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入获奖人列表"/>
+                                        <input type="text" name="post[grantee_list]" id="title"
+                                               value="{$post.grantee_list}" placeholder="请输入获奖人列表" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">获奖级别</th>
                                     <td>
-                                        <select class="form-control" style="width:90px;">
-                                            <option>请选择</option>
-                                            <option>国家级</option>
-                                            <option>省部级</option>
-                                            <option>市厅级</option>
-                                            <option>校级</option>
-                                            <option>其它</option>
+                                        <select class="form-control" name="post[award_level]" required style="width:90px;">
+                                            <option value="" disabled >请选择</option>
+                                            <option value="1" <?php echo $post['award_level']==1?'selected':''?> >国家级</option>
+                                            <option value="2" <?php echo $post['award_level']==2?'selected':''?> >省部级</option>
+                                            <option value="3" <?php echo $post['award_level']==3?'selected':''?> >市厅级</option>
+                                            <option value="4" <?php echo $post['award_level']==4?'selected':''?> >校级</option>
+                                            <option value="5" <?php echo $post['award_level']==5?'selected':''?> >其它</option>
                                         </select>
                                         <span class="form-required">*</span>
                                     </td>
@@ -62,30 +64,31 @@
                                 <tr>
                                     <th width="80">授予方名称</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入授予方名称"/>
+                                        <input type="text" name="post[grantor]" id="title"
+                                               value="{$post.grantor}" placeholder="请输入授予方名称" required/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">证明材料</th>
                                     <td>
-                                        <script type="text/plain" id="content" name="post[post_content]"></script>
+                                        <script type="text/plain" id="content" name="post[provement]">{$post.provement}</script>
                                     </td>
                                 </tr>
                             </table>
-                            <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
+                            <button class="btn btn-primary js-ajax-submit" type="submit">更新</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <tc_include file="Public:footer"/>
+    <tc_include file="Public:footer" />
 
 </div>
 <!-- /container -->
 
-<tc_include file="Public:scripts"/>
+<tc_include file="Public:scripts" />
 </body>
 </html>
