--- a/themes/simplebootx/User/Profile/edit_paper.html
+++ b/themes/simplebootx/User/Profile/edit_paper.html
@@ -17,15 +17,17 @@
         <div class="span9">
             <div class="tabs">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#one" data-toggle="tab"><i class="fa fa-pencil"></i> 上传论文</a></li>
-                    <li><a href="{:U('user/profile/upload_project')}"><i class="fa fa-pencil"></i> 上传项目</a></li>
-                    <li><a href="{:U('user/profile/upload_award')}"><i class="fa fa-pencil"></i> 上传获奖</a></li>
-                    <li><a href="{:U('user/profile/upload_patent')}"><i class="fa fa-pencil"></i> 上传专利</a></li>
+                    <li><a href="{:U('user/profile/manage')}"><i class="fa fa-desktop"></i> 总览</a></li>
+                    <li class="active"><a href="#"><i class="fa fa-desktop"></i> 论文管理</a></li>
+                    <li><a href="{:U('user/profile/manage_project')}"><i class="fa fa-desktop"></i> 项目管理</a></li>
+                    <li><a href="{:U('user/profile/manage_award')}"><i class="fa fa-desktop"></i> 获奖管理</a></li>
+                    <li><a href="{:U('user/profile/manage_patent')}"><i class="fa fa-desktop"></i> 专利管理</a></li>
                 </ul>
                 <div class="tab-content">
-                    <form action="{:U('AdminPage/add_post')}" method="post" class="form-horizontal js-ajax-forms"
+                    <form action="{:U('User/Profile/content_update')}" method="post" class="form-horizontal js-ajax-forms"
                           enctype="multipart/form-data">
-                        <input type="hidden" name="post[post_type]" value="2">
+                        <input type="hidden" name="id" value="{$post.id}">
+                        <input type="hidden" name="post[post_type]" value="paper">
                         <div class="row-fluid">
 
                             <table class="table table-bordered">
@@ -33,15 +35,15 @@
                                     <th width="80">论文/著作</th>
                                     <td>
                                         <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入论文/著作标题"/>
+                                               value="{$post.title}" placeholder="请输入论文/著作标题" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">期刊/出版社</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入期刊/出版社"/>
+                                        <input type="text" name="post[press]" id="press"
+                                               value="{$post.press}" placeholder="请输入期刊/出版社" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
@@ -49,7 +51,7 @@
                                     <th width="80">出版年月</th>
                                     <td>
                                         <input class="js-date" type="text" id="input-publicdate"
-                                               placeholder="2016-01-01" name="publicdate" value="{$publicdate}"
+                                               placeholder="2016-01-01" name="post[publish_date]" value="{$post.publish_date}"
                                                style="width:90px">
                                         <span class="form-required">*</span>
                                     </td>
@@ -57,23 +59,24 @@
                                 <tr>
                                     <th width="80">卷号页码等信息</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入卷号页码等信息"/>
+                                        <input type="text" name="post[volume_info]" id="title"
+                                               value="{$post.volume_info}" placeholder="请输入卷号页码等信息" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">作者列表</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入作者列表"/>
+                                        <input type="text" name="post[author_list]" id="title"
+                                               value="{$post.author_list}" placeholder="请输入作者列表" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">本人贡献度</th>
                                     <td>
-                                        <input type="number" value="" min="1" max="100" style="width: 50px">% &nbsp;
+                                        <input type="number" name="post[contribute]" value="{$post.contribute}" min="1" max="100" style="width: 50px">%
+                                        &nbsp;
 
                                         <span class="form-required">*</span>
                                     </td>
@@ -81,14 +84,14 @@
                                 <tr>
                                     <th width="80">期刊级别（1-6类）</th>
                                     <td>
-                                        <select class="form-control" style="width:90px;">
-                                            <option>请选择</option>
-                                            <option>1类</option>
-                                            <option>2类</option>
-                                            <option>3类</option>
-                                            <option>4类</option>
-                                            <option>5类</option>
-                                            <option>6类</option>
+                                        <select class="form-control" name="post[journal_class]" required style="width:90px;">
+                                            <option value="" disabled >请选择</option>
+                                            <option value="1" <?php echo $post['journal_class']==1?'selected':''?> >1类</option>
+                                            <option value="2" <?php echo $post['journal_class']==2?'selected':''?> >2类</option>
+                                            <option value="3" <?php echo $post['journal_class']==3?'selected':''?> >3类</option>
+                                            <option value="4" <?php echo $post['journal_class']==4?'selected':''?> >4类</option>
+                                            <option value="5" <?php echo $post['journal_class']==5?'selected':''?> >5类</option>
+                                            <option value="6" <?php echo $post['journal_class']==6?'selected':''?> >6类</option>
                                         </select>
                                         <span class="form-required">*</span>
                                     </td>
@@ -96,7 +99,7 @@
                                 <tr>
                                     <th width="80">证明材料</th>
                                     <td>
-                                        <script type="text/plain" id="content" name="post[post_content]"></script>
+                                        <script type="text/plain" id="content" name="post[provement]">{$post.provement}</script>
                                     </td>
                                 </tr>
                             </table>
