登录功能接入API

--- a/admin/themes/simplebootx/Admin/boot/index.html
+++ b/admin/themes/simplebootx/Admin/boot/index.html
@@ -190,7 +190,7 @@ right: initial !important;}
 								<img class="nav-user-photo" width="30" height="30" src="__TMPL__Public/assets/images/logo-18.png" alt="{$admin.user_login}">
 							</if>
 							<span class="user-info">
-								{:L('WELCOME_USER',array('username'=>empty($admin['user_nicename'])?$admin['user_login']:$admin['user_nicename']))}
+								{:L('WELCOME_USER',array('username'=>empty($admin['user_name'])?$admin['user_login']:$admin['user_name']))}
 							</span>
 							<i class="fa fa-caret-down"></i>
 						</a>
