--- a/themes/simplebootx/Comment/comment.html
+++ b/themes/simplebootx/Comment/comment.html
@@ -22,12 +22,12 @@
 	</form>
 	
 	<script class="comment-tpl" type="text/html">
-		<div class="comment" data-username="{$user.user_nicename}" data-uid="{$user.id}">
+		<div class="comment" data-username="{$user.user_name}" data-uid="{$user.id}">
 		  <a class="pull-left" href="{:U('user/index/index',array('id'=>$user['id']))}">
 		    <img class="media-object avatar" src="{:U('user/public/avatar',array('id'=>$user['id']))}" class="headicon"/>
 		  </a>
 		  <div class="comment-body">
-		    <div class="comment-content"><a href="{:U('user/index/index',array('id'=>$user['id']))}">{$user.user_nicename}</a>:<span class="content"></span></div>
+		    <div class="comment-content"><a href="{:U('user/index/index',array('id'=>$user['id']))}">{$user.user_name}</a>:<span class="content"></span></div>
 		    <div><span class="time">刚刚</span> <a onclick="comment_reply(this);" href="javascript:;"><i class="fa fa-comment"></i></a></div>
 		  </div>
 		  <div class="clearfix"></div>
