--- a/themes/simplebootx/User/Profile/edit.html
+++ b/themes/simplebootx/User/Profile/edit.html
@@ -24,9 +24,9 @@
                                    <div class="tab-pane active" id="one">
                                    		<form class="form-horizontal js-ajax-form" action="{:U('profile/edit_post')}" method="post">
                                    			<div class="control-group">
-                                   				<label class="control-label" for="input-user_nicename">姓名</label>
+                                   				<label class="control-label" for="input-user_name">姓名</label>
                                    				<div class="controls">
-                                   					<input type="text" id="input-user_nicename" placeholder="姓名" name="user_nicename" value="{$user_nicename}">
+                                   					<input type="text" id="input-user_name" placeholder="姓名" name="user_name" value="{$user_name}">
                                    				</div>
                                    			</div>
                                    			<div class="control-group">
