--- a/admin/themes/simplebootx/Admin/User/userinfo.html
+++ b/admin/themes/simplebootx/Admin/User/userinfo.html
@@ -9,10 +9,10 @@
 		<form class="form-horizontal js-ajax-form" method="post" action="{:U('User/userinfo_post')}">
 			<fieldset>
 				<div class="control-group">
-					<label class="control-label" for="input-user_nicename">{:L('NICENAME')}</label>
+					<label class="control-label" for="input-user_name">{:L('NICENAME')}</label>
 					<div class="controls">
 						<input type="hidden" name="id" value="{$id}">
-						<input type="text" id="input-user_nicename" name="user_nicename" value="{$user_nicename}">
+						<input type="text" id="input-user_name" name="user_name" value="{$user_name}">
 					</div>
 				</div>
 				<div class="control-group">
