--- a/admin/themes/simplebootx/User/index.html
+++ b/admin/themes/simplebootx/User/index.html
@@ -27,7 +27,7 @@
 					<tr>
 						<td align="center">{$vo.id}</td>
 						<td>{$vo['user_login']?$vo['user_login']:L('THIRD_PARTY_USER')}</td>
-						<td>{$vo['user_nicename']?$vo['user_nicename']:L('NOT_FILLED')}</td>
+						<td>{$vo['user_name']?$vo['user_name']:L('NOT_FILLED')}</td>
 						<td><img width="25" height="25" src="{:U('user/public/avatar',array('id'=>$vo['id']))}" /></td>
 						<td>{$vo.user_email}</td>
 						<td>{$vo.create_time}</td>
