--- a/themes/simplebootx/Public/scripts.html
+++ b/themes/simplebootx/Public/scripts.html
@@ -135,7 +135,7 @@ var GV = {
 					$("#main-menu-user .headicon").attr("src",data.user.avatar.indexOf("http")==0?data.user.avatar:"__UPLOAD__avatar/"+data.user.avatar);
 				}
 				
-				$("#main-menu-user .user-nicename").text(data.user.user_nicename!=""?data.user.user_nicename:data.user.user_login);
+				$("#main-menu-user .user-nicename").text(data.user.user_name!=""?data.user.user_name:data.user.user_login);
 				$("#main-menu-user li.login").show();
 				
 			}
