--- a/themes/simplebootx/User/center.html
+++ b/themes/simplebootx/User/center.html
@@ -40,9 +40,9 @@
 										  </div>      
 										  <div class="span3">
                                    			<div class="control-group">
-                                   				<label class="control-label" for="input-user_nicename">姓名</label>
+                                   				<label class="control-label" for="input-user_name">姓名</label>
                                    				<div class="controls">
-                                   					{$user_nicename|default='未填写'}
+                                   					{$user_name|default='未填写'}
                                    				</div>
                                    			</div>
                                    			<div class="control-group">
