实现个人内容的列表显示

--- a/themes/simplebootx/User/Profile/edit_paper.html
+++ b/themes/simplebootx/User/Profile/edit_paper.html
@@ -103,8 +103,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <button class="btn btn-primary js-ajax-submit" type="submit">保存</button>
-                            <button class="btn btn-primary js-ajax-submit" >取消</button>
+                            <button class="btn btn-primary js-ajax-submit" type="submit">更新</button>
                     </form>
                 </div>
             </div>
