--- a/themes/simplebootx/User/Profile/edit_patent.html
+++ b/themes/simplebootx/User/Profile/edit_patent.html
@@ -67,7 +67,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
+                            <button class="btn btn-primary js-ajax-submit" type="submit">更新</button>
                     </form>
                 </div>
                     </div>
