--- a/themes/simplebootx/User/Profile/manage_paper.html
+++ b/themes/simplebootx/User/Profile/manage_paper.html
@@ -40,21 +40,15 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td style="display: none;">{$vo.id}</td>
-                                        <td><a href="{$vo.url}">存在的价值——读波伏瓦《人都是要死的》</a></td>
-                                        <td>本报记者 孟明 通讯员 张国文 吴永生</td>
-                                        <td>2015-12-12</td>
-                                        <td>1230</td>
-                                        <td>未审核</td>
-                                        <td><a href="{:U('user/profile/edit_paper')}">编辑</a> | <a class="js-ajax-dialog-btn" href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}" data-msg="您确定要删除吗？" data-ok="" data-cacel="取消">删除</a></td>
-                                    </tr>
-                                    <foreach name="favorites" item="vo">
+                                    <foreach name="paper" item="vo">
                                         <tr>
-                                            <td>{$vo.id}</td>
-                                            <td>{$vo.title}</td>
-                                            <td>{$vo.description}</td>
-                                            <td><a href="{$vo.url}">查看</a> | <a class="js-ajax-dialog-btn" href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}" data-msg="您确定要取消收藏吗？" data-ok="" data-cacel="取消">取消收藏</a></td>
+                                            <td style="display: none ">{$vo.id}</td>
+                                            <td><a href="{$vo.url}">{$vo.title}</a></td>
+                                            <td>{$vo.author_list}</td>
+                                            <td>{$vo.publish_date}</td>
+                                            <td>{$vo.post_hits}</td>
+                                            <td><php>echo $vo['status'] == 0?'未审核':'已审核'</php></td>
+                                            <td><a href="{:U('user/profile/edit_paper',array('id'=>$vo['id']))}">编辑</a> | <a class="js-ajax-dialog-btn" href="{:U('user/profile/delete_paper',array('id'=>$vo['id']))}" data-msg="您确定要删除吗？" data-ok="" data-cacel="取消">删除</a></td>
                                         </tr>
                                     </foreach>
                                 </tbody>
