--- a/themes/simplebootx/User/Profile/manage_project.html
+++ b/themes/simplebootx/User/Profile/manage_project.html
@@ -38,28 +38,19 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
-                                <td style="display: none;">{$vo.id}</td>
-                                <td><a href="{$vo.url}">存在的价值——读波伏瓦《人都是要死的》</a></td>
-                                <td>横向</td>
-                                <td>市部级</td>
-                                <td>1230</td>
-                                <td>未审核</td>
-                                <td><a href="{:U('user/profile/edit_article')}">编辑</a> | <a class="js-ajax-dialog-btn"
-                                                                                            href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}"
-                                                                                            data-msg="您确定要删除吗？"
-                                                                                            data-ok="" data-cacel="取消">删除</a>
-                                </td>
-                            </tr>
-                            <foreach name="favorites" item="vo">
+                            <foreach name="project" item="vo">
                                 <tr>
-                                    <td>{$vo.id}</td>
-                                    <td>{$vo.title}</td>
-                                    <td>{$vo.description}</td>
-                                    <td><a href="{$vo.url}">查看</a> | <a class="js-ajax-dialog-btn"
-                                                                        href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}"
-                                                                        data-msg="您确定要取消收藏吗？" data-ok=""
-                                                                        data-cacel="取消">取消收藏</a></td>
+                                    <td style="display: none;">{$vo.id}</td>
+                                    <td><a href="{$vo.url}">{$vo.title}</a></td>
+                                    <td>{$vo.type}</td>
+                                    <td>{$vo.project_level}</td>
+                                    <td>{$vo.post_hits}</td>
+                                    <td><php>echo $vo['status'] == 0?'未审核':'已审核'</php></td>
+                                    <td><a href="{:U('user/profile/edit_project',array('id'=>$vo['id']))}">编辑</a> | <a class="js-ajax-dialog-btn"
+                                                                                                href="{:U('user/Profile/delete_project',array('id'=>$vo['id']))}"
+                                                                                                data-msg="您确定要删除吗？"
+                                                                                                data-ok="" data-cacel="取消">删除</a>
+                                    </td>
                                 </tr>
                             </foreach>
                             </tbody>
