添加文章所属院系，修复编辑标题的功能

--- a/themes/simplebootx/User/Profile/edit.html
+++ b/themes/simplebootx/User/Profile/edit.html
@@ -33,7 +33,7 @@
                                    				<label class="control-label" for="input-sex">性别</label>
                                    				<div class="controls">
                                    					<php>
-	                                   				$sexs=array("1"=>"男","2"=>"女");
+	                                   				$sexs=array("0"=>"保密","1"=>"男","2"=>"女");
 	                                   				</php>
                                    					<select id="input-sex" name="sex">
                                    						<foreach name="sexs" item="vo">
