--- a/themes/simplebootx/User/Profile/edit_paper.html
+++ b/themes/simplebootx/User/Profile/edit_paper.html
@@ -34,7 +34,7 @@
                                 <tr>
                                     <th width="80">论文/著作</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
+                                        <input type="text" name="post[title]" id="title"
                                                value="{$post.title}" placeholder="请输入论文/著作标题" />
                                         <span class="form-required">*</span>
                                     </td>
